@@ -99,6 +99,7 @@ G_BEGIN_DECLS
 #define GIMP_STOCK_TEXT_DIR_RTL             "gimp-text-dir-rtl"
 
 #define GIMP_STOCK_TOOL_AIRBRUSH            "gimp-tool-airbrush"
+#define GIMP_STOCK_TOOL_ALIGN               "gimp-tool-align"
 #define GIMP_STOCK_TOOL_BLEND               "gimp-tool-blend"
 #define GIMP_STOCK_TOOL_BLUR                "gimp-tool-blur"
 #define GIMP_STOCK_TOOL_BRIGHTNESS_CONTRAST "gimp-tool-brightness-contrast"
